# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//:thrax.bzl", "grm_regression_test", "thrax_compile_grm")

package(default_visibility = ["//visibility:public"])

base_path = "km/textnorm/verbalizer/"

[
    grm_regression_test(
        name = test_rules + "_tests",
        far_file = test_rules + ".far",
        far_file_path = base_path,
        test_file = "testdata/" + test_rules + ".tsv",
        test_file_path = base_path,
    )
    for test_rules in [
        "address",
        "cardinal",
        "connector",
        "date",
        "decimal",
        "digit",
        "electronic",
        "emoticons",
        "fraction",
        "lseq",
        "measure",
        "money",
        "repeater",
        "telephone",
        "time",
        "verbatim",
    ]
]

thrax_compile_grm(
    name = "universal_rules",
    deps = ["universal_depot.far"],
)

thrax_compile_grm(
    name = "universal_func",
    deps = [
        "universal_rules.far",
        "universal_rules.grm",
    ],
)

universal_deps = [
    "universal_func.far",
    "universal_func.grm",
    "universal_rules.far",
    "universal_rules.grm",
]

thrax_compile_grm(
    name = "number_names_rules",
    deps = [
        "number_names_depot.far",
    ],
)

[
    thrax_compile_grm(
        name = rule_name,
        deps = universal_deps,
    )
    for rule_name in [
        "connector",
        "digit",
        "lseq",
    ]
]

thrax_compile_grm(
    name = "cardinal",
    deps = [
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "address",
    deps = [
        "cardinal.far",
        "cardinal.grm",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "date",
    deps = [
        "cardinal.far",
        "cardinal.grm",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "fraction",
    deps = [
        "cardinal.far",
        "cardinal.grm",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "decimal",
    deps = [
        "cardinal.far",
        "cardinal.grm",
        "digit.far",
        "digit.grm",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "measure",
    deps = [
        "cardinal.far",
        "cardinal.grm",
        "digit.far",
        "digit.grm",
        "fraction.far",
        "fraction.grm",
        "decimal.far",
        "decimal.grm",
        "measure_prefixes_en.txt",
        "measure_prefixes_km.txt",
        "measure_units_en.txt",
        "measure_units_km.txt",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "telephone",
    deps = [
        "cardinal.far",
        "cardinal.grm",
        "digit.far",
        "digit.grm",
        "measure_units_km.txt",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "time",
    deps = [
        "cardinal.far",
        "cardinal.grm",
        "lseq.far",
        "lseq.grm",
        "measure_units_km.txt",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "verbatim",
    deps = [
        "digit.far",
        "digit.grm",
        "lseq.far",
        "lseq.grm",
        "verbatim.tsv",
        "measure_units_km.txt",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "money",
    deps = [
        "cardinal.far",
        "cardinal.grm",
        "digit.far",
        "digit.grm",
        "fraction.far",
        "fraction.grm",
        "decimal.far",
        "decimal.grm",
        "money_major.txt",
        "money_minor.txt",
        "verbatim.tsv",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "emoticons",
    deps = [
        "emoticons.tsv",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "electronic",
    deps = [
        "digit.far",
        "digit.grm",
        "verbatim.far",
        "verbatim.grm",
        "lseq.far",
        "lseq.grm",
        "measure_units_km.txt",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
        "urls.txt",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "repeater",
    deps = [
        "emoticons.tsv",
        "//km/textnorm/classifier:classifier_repeater.grm",
        "//km/textnorm/classifier:classifier_repeater.far",
        "//km/textnorm/classifier:khmer.grm",
        "//km/textnorm/classifier:khmer.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "verbalize",
    deps = [
        "address.grm",
        "address.far",
        "cardinal.grm",
        "cardinal.far",
        "connector.grm",
        "connector.far",
        "date.grm",
        "date.far",
        "decimal.grm",
        "decimal.far",
        "digit.grm",
        "digit.far",
        "electronic.grm",
        "electronic.far",
        "emoticons.grm",
        "emoticons.far",
        "fraction.grm",
        "fraction.far",
        "lseq.grm",
        "lseq.far",
        "measure.grm",
        "measure.far",
        "money.grm",
        "money.far",
        "repeater.grm",
        "repeater.far",
        "telephone.grm",
        "telephone.far",
        "time.grm",
        "time.far",
        "verbatim.grm",
        "verbatim.far",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
        "//km/textnorm/classifier:classifier_repeater.grm",
        "//km/textnorm/classifier:classifier_repeater.far",
        "//km/textnorm/classifier:khmer.grm",
        "//km/textnorm/classifier:khmer.far",
    ] + universal_deps,
)
