# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("//:thrax.bzl", "thrax_compile_grm")
load("//:thrax.bzl", "grm_regression_test")

exports_files([
    "lseq_exceptions.tsv",
])

base_path = "my/textnorm/classifier/"

[
    grm_regression_test(
        name = test_rules + "_tests",
        far_file = test_rules + ".far",
        far_file_path = base_path,
        test_file = "testdata/" + test_rules + ".tsv",
        test_file_path = base_path,
    )
    for test_rules in [
        "connector",
        "date",
        "lseq",
        "money",
        "time",
        "tokenize_and_classify",
    ]
]

grm_regression_test(
    name = "fraction_tests",
    far_file = "tokenize_and_classify.far",
    far_file_path = base_path,
    test_file = "testdata/fraction.tsv",
    test_file_path = base_path,
)

universal_deps = [
    "universal_func.far",
    "universal_func.grm",
    "universal_rules.far",
    "universal_rules.grm",
]

thrax_compile_grm(
    name = "universal_rules",
    deps = ["universal_depot.far"],
)

thrax_compile_grm(
    name = "universal_func",
    deps = [
        "universal_rules.far",
        "universal_rules.grm",
    ],
)

thrax_compile_grm(
    name = "connector",
    deps =  [
        "time.far", 
        "time.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "burmese",
    deps = universal_deps,
)

thrax_compile_grm(
    name = "money",
    deps = universal_deps,
)

thrax_compile_grm(
    name = "time",
    deps = universal_deps,
)

thrax_compile_grm(
    name = "date",
    deps = [
        "burmese.far", 
        "burmese.grm",
    ] + 
    universal_deps,
)

thrax_compile_grm(
    name = "lseq",
    deps = [
        "lseq_exceptions.tsv",
        "burmese.far", 
        "burmese.grm",
    ] + 
    universal_deps,
)

thrax_compile_grm(
    name = "classify",
    deps = [
        "burmese.grm",
        "burmese.far",
        "connector.grm",
        "connector.far",
        "date.grm",
        "date.far",
        "lseq.grm",
        "lseq.far",
        "money.grm",
        "money.far",
        "time.grm",
        "time.far",
    ] + 
    universal_deps,
)



thrax_compile_grm(
    name = "tokenize_and_classify",
    deps = [
        "classify.grm",
        "classify.far",
        "burmese.grm",
        "burmese.far",
        "connector.grm",
        "connector.far",
        "date.grm",
        "date.far",
        "lseq.grm",
        "lseq.far",
        "money.grm",
        "money.far",
        "time.grm",
        "time.far",
    ] + 
    universal_deps,
)
