# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("//:thrax.bzl", "thrax_compile_grm")
load("//:thrax.bzl", "grm_regression_test")

base_path = "my/textnorm/verbalizer/"

[
    grm_regression_test(
        name = test_rules + "_tests",
        far_file = test_rules + ".far",
        far_file_path = base_path,
        test_file = "testdata/" + test_rules + ".tsv",
        test_file_path = base_path,
    )
    for test_rules in [
        "cardinal",
        "connector",
        "date",
        "decimal",
        "digit",
        "electronic",
        "emoticons",
        "fraction",
        "lseq",
        "measure",
        "money",
        "telephone",
        "time",
        "verbalize",
        "verbatim",
    ]
]


universal_deps = [
    "universal_func.far",
    "universal_func.grm",
    "universal_rules.far",
    "universal_rules.grm",
]

thrax_compile_grm(
    name = "universal_rules",
    deps = ["universal_depot.far"],
)

thrax_compile_grm(
    name = "universal_func",
    deps = [
        "universal_rules.far",
        "universal_rules.grm",
    ],
)

thrax_compile_grm(
    name = "number_names_rules",
    deps = [
        "number_names_depot.far",
    ],
)

thrax_compile_grm(
    name = "connector",
    deps = universal_deps,
)

thrax_compile_grm(
    name = "lseq",
    deps = universal_deps,
)

thrax_compile_grm(
    name = "emoticons",
    deps = [
        "emoticons.tsv",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "digit",
    deps = universal_deps,
)

thrax_compile_grm(
    name = "cardinal",
    deps = [
        "digit.grm",
        "digit.far",
        "number_names_rules.grm",
        "number_names_rules.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "telephone",
    deps = [
        "digit.grm",
        "digit.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "date",
    deps = [
        "cardinal.grm",
        "cardinal.far",
        "digit.grm",
        "digit.far",
        "number_names_rules.grm",
        "number_names_rules.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "time",
    deps = [
        "cardinal.grm",
        "cardinal.far",
        "digit.grm",
        "digit.far",
        "lseq.grm",
        "lseq.far",
        "number_names_rules.grm",
        "number_names_rules.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "fraction",
    deps = [
        "cardinal.grm",
        "cardinal.far",
        "digit.grm",
        "digit.far",
        "number_names_rules.grm",
        "number_names_rules.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "decimal",
    deps = [
        "cardinal.far",
        "cardinal.grm",
        "digit.far",
        "digit.grm",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "money",
    deps = [
        "decimal.far",
        "decimal.grm",
        "cardinal.far",
        "cardinal.grm",
        "digit.far",
        "digit.grm",
        "money_minor.tsv",
        "money_major.tsv",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "verbatim",
    deps = [
        "digit.far",
        "digit.grm",
        "lseq.far",
        "lseq.grm",
        "verbatim.tsv",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "electronic",
    deps = [
        "cardinal.far",
        "cardinal.grm",
        "decimal.far",
        "decimal.grm",
        "digit.far",
        "digit.grm",
        "lseq.far",
        "lseq.grm",
        "number_names_rules.far",
        "number_names_rules.grm",
        "urls.tsv",
        "verbatim.far",
        "verbatim.grm",
        "verbatim.tsv",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "measure",
    deps = [
        "cardinal.far",
        "cardinal.grm",
        "decimal.far",
        "decimal.grm",
        "digit.far",
        "digit.grm",
        "lseq.far",
        "lseq.grm",
        "measure_prefixes_en.txt",
        "measure_units_en.txt",
        "number_names_rules.far",
        "number_names_rules.grm",
        "verbatim.tsv",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "verbalize",
    deps = [
        "number_names_rules.far",
        "number_names_rules.grm",
        "money_minor.tsv",
        "money_major.tsv",
        "urls.tsv",
        "verbatim.tsv",
        "measure_prefixes_en.txt",
        "measure_units_en.txt",
        "cardinal.grm",
        "cardinal.far",
        "connector.grm",
        "connector.far",
        "date.grm",
        "date.far",
        "decimal.grm",
        "decimal.far",
        "digit.grm",
        "digit.far",
        "electronic.grm",
        "electronic.far",
        "emoticons.grm",
        "emoticons.far",
        "fraction.grm",
        "fraction.far",
        "lseq.grm",
        "lseq.far",
        "measure.grm",
        "measure.far",
        "money.grm",
        "money.far",
        "telephone.grm",
        "telephone.far",
        "time.grm",
        "time.far",
        "verbatim.grm",
        "verbatim.far",
    ] + universal_deps,
)
