# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//:thrax.bzl", "grm_regression_test", "thrax_compile_grm")

package(default_visibility = ["//visibility:public"])

base_path = "ne/textnorm/verbalizer/"

[
    grm_regression_test(
        name = test_rules + "_tests",
        far_file = test_rules + ".far",
        far_file_path = base_path,
        test_file = "testdata/" + test_rules + ".tsv",
        test_file_path = base_path,
    )
    for test_rules in [
        "cardinal",
        "connector",
        "date",
        "decimal",
        "digit",
        "electronic",
        "emoticons",
        "fraction",
        "lseq",
        "measure",
        "money",
        "ordinal",
        "telephone",
        "time",
        "verbatim",
    ]
]

thrax_compile_grm(
    name = "universal_rules",
    deps = ["universal_depot.far"],
)

thrax_compile_grm(
    name = "universal_func",
    deps = [
        "universal_rules.far",
        "universal_rules.grm",
    ],
)

universal_deps = [
    "universal_func.far",
    "universal_func.grm",
    "universal_rules.far",
    "universal_rules.grm",
]

thrax_compile_grm(
    name = "number_names_rules",
    deps = [
        "number_names_depot.far",
    ],
)

[
    thrax_compile_grm(
        name = rule_name,
        deps = universal_deps,
    )
    for rule_name in [
        "connector",
        "digit",
        "lseq",
    ]
]

thrax_compile_grm(
    name = "cardinal",
    deps = [
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "date",
    deps = [
        "cardinal.grm",
        "cardinal.far",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "decimal",
    deps = [
        "cardinal.grm",
        "cardinal.far",
        "digit.grm",
        "digit.far",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "fraction",
    deps = [
        "cardinal.grm",
        "cardinal.far",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "telephone",
    deps = [
        "digit.grm",
        "digit.far",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "emoticons",
    deps = [
        "emoticons.tsv",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "money",
    deps = [
        "cardinal.grm",
        "cardinal.far",
        "digit.grm",
        "digit.far",
        "decimal.grm",
        "decimal.far",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
        "money_country_major.txt",
        "money_country_minor.txt",
        "money_major.txt",
        "money_minor.txt",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "measure",
    deps = [
        "cardinal.grm",
        "cardinal.far",
        "digit.grm",
        "digit.far",
        "decimal.grm",
        "decimal.far",
        "fraction.grm",
        "fraction.far",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
        "measure_prefixes_en.tsv",
        "measure_prefixes_ne.tsv",
        "measure_units_en.tsv",
        "measure_units_ne.tsv",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "ordinal",
    deps = [
        "cardinal.far",
        "cardinal.grm",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
        "//ne/textnorm/classifier:devanagari.far",
        "//ne/textnorm/classifier:devanagari.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "time",
    deps = [
        "cardinal.grm",
        "cardinal.far",
        "lseq.grm",
        "lseq.far",
        "digit.grm",
        "digit.far",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "verbatim",
    deps = [
        "lseq.grm",
        "lseq.far",
        "digit.grm",
        "digit.far",
        "verbatim.tsv",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "electronic",
    deps = [
        "verbatim.grm",
        "verbatim.far",
        "lseq.grm",
        "lseq.far",
        "digit.grm",
        "digit.far",
        "urls.tsv",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
    ] + universal_deps,
)

thrax_compile_grm(
    name = "verbalize",
    deps = [
        "cardinal.far",
        "cardinal.grm",
        "connector.far",
        "connector.grm",
        "date.far",
        "date.grm",
        "decimal.far",
        "decimal.grm",
        "digit.far",
        "digit.grm",
        "electronic.far",
        "electronic.grm",
        "emoticons.far",
        "emoticons.grm",
        "fraction.far",
        "fraction.grm",
        "lseq.far",
        "lseq.grm",
        "measure.far",
        "measure.grm",
        "money.far",
        "money.grm",
        "number_names_depot.far",
        "number_names_rules.far",
        "number_names_rules.grm",
        "ordinal.far",
        "ordinal.grm",
        "telephone.far",
        "telephone.grm",
        "time.far",
        "time.grm",
        "verbatim.far",
        "verbatim.grm",
        "//ne/textnorm/classifier:devanagari.far",
        "//ne/textnorm/classifier:devanagari.grm",
    ] + universal_deps,
)
